<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_menu">Menu button</string>
    <string name="author_avatar">The avatar of the author of the post</string>
    <string name="hearts">The likes icon</string>
    <string name="reposts">The reposts icon</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="editing_content_label">Edit Message</string>
    <string name="cancel_editing">Cancel</string>
    <string name="description_post_share">Send post to</string>
    <string name="description_post_save">Save post</string>
    <string name="description_post_add">Add post</string>
    <string name="description_post_video">Icon video</string>
</resources>