<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_l"
        tools:context=".fragment.PostFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_more_vert_24" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/image_layout_l"
        android:layout_height="@dimen/image_layout_l"
        android:layout_marginBottom="@dimen/margin_h"
        android:contentDescription="@string/author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/top_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_h"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="@dimen/margin_h"
        android:layout_marginStart="@dimen/margin_h"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heart"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/hearts"
        app:icon="@drawable/ic_topic_heart_selector"
        app:iconGravity="textStart"
        app:iconTint="@color/like_color_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        tools:checked="true"
        tools:text="20" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reposts"
        style="@style/Widget.AppTheme.RepostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/reposts"
        app:icon="@drawable/ic_topic_repost"
        app:layout_constraintStart_toEndOf="@id/heart"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        tools:text="995" />

    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:paddingTop="@dimen/margin_h"
        android:paddingBottom="@dimen/margin_h"
        android:contentDescription="@string/reposts"
        app:layout_constraintEnd_toStartOf="@id/countViews"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:srcCompat="@drawable/ic_topic_show" />

    <TextView
        android:id="@+id/countViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_l"
        android:paddingTop="@dimen/margin_h"
        android:paddingBottom="@dimen/margin_h"
        app:layout_constraintBottom_toBottomOf="@id/heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        tools:text="1.5M" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/video"
        style="@style/VideoButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description_post_video"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintTop_toBottomOf="@id/countViews"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
