<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margi_l">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/image_layout_l"
        android:layout_height="@dimen/image_layout_l"
        android:layout_marginBottom="@dimen/margi_h"
        android:contentDescription="@string/author_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/top_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/post_avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margi_h"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margi_h"
        android:layout_marginEnd="@dimen/margi_h"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageButton
        android:id="@+id/heart"
        android:layout_width="@dimen/image_layout_s"
        android:layout_height="@dimen/image_layout_s"
        android:layout_marginTop="@dimen/image_layout_s"
        android:paddingHorizontal="@dimen/margi_l"
        android:contentDescription="@string/hearts"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_topic_heart" />

    <TextView
        android:id="@+id/countHearts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_layout_s"
        android:paddingHorizontal="@dimen/margi_l"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:layout_constraintBottom_toBottomOf="@id/heart"
        app:layout_constraintStart_toEndOf="@id/heart"

        tools:text="@sample/posts.json/data/likes" />
    <ImageButton
        android:id="@+id/reposts"
        android:layout_width="@dimen/image_layout_s"
        android:layout_height="@dimen/image_layout_s"
        android:layout_marginTop="@dimen/image_layout_s"
        android:contentDescription="@string/reposts"
        android:layout_marginHorizontal="@dimen/margi_l"
        android:paddingHorizontal="@dimen/margi_l"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:layout_constraintStart_toEndOf="@id/countHearts"
        app:srcCompat="@drawable/ic_topic_repost" />

    <TextView
        android:id="@+id/countReposts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_layout_s"
        android:paddingHorizontal="@dimen/margi_l"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:layout_constraintBottom_toBottomOf="@id/heart"
        app:layout_constraintStart_toEndOf="@id/reposts"
        tools:text="@sample/posts.json/data/repost" />

    <ImageView
        android:id="@+id/views"
        android:layout_width="@dimen/image_layout_s"
        android:layout_height="@dimen/image_layout_s"
        android:layout_marginTop="@dimen/image_layout_s"
        android:contentDescription="@string/reposts"
        android:layout_marginHorizontal="@dimen/margi_l"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:layout_constraintEnd_toStartOf="@id/countViews"
        app:srcCompat="@drawable/ic_topic_show" />

    <TextView
        android:id="@+id/countViews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_layout_s"
        android:layout_marginRight="@dimen/margi_l"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:layout_constraintBottom_toBottomOf="@id/heart"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>